@@ -1,5 +1,10 @@
 2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* pp/op_to_source.cpp: make each line be prefixed with the samples
+	counts. It was too hard to find samples inside prevous format.
+
+2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libutil++/string_manip.cpp: work around for gcc 2.95
 	* p/op_to_source.cpp: minor cleanup
 
